# teensy_playground

./: README.md
snippets/adc_12bit_and_pwm/: CMakeLists.txt  app.overlay  prj.conf
snippets/adc_12bit_and_pwm/src/: main.c
snippets/linescan_camera/: CMakeLists.txt  app.overlay  notes.txt  prj.conf
snippets/linescan_camera/dts/bindings/: pwm-ledc.yaml
snippets/linescan_camera/inc/: adc.h  algorithm.h  blink.h  camera.h  gpio.h  led.h  pwm.h  servo.h  usb.h
snippets/linescan_camera/src/: adc.c  algorithm.c  blink.c  camera.c  gpio.c  led.c  main.c  pwm.c  servo.c  usb.c
